--- a/src/main/resources/password/pwm/i18n/Display_fr_CA.properties
+++ b/src/main/resources/password/pwm/i18n/Display_fr_CA.properties
@@ -30,7 +30,7 @@ Button_ChangePassword=\u00c9diter le mot de passe
 Button_ChangeResponses=Pr\u00e9c\u00e9dent
 Button_CheckCode=V\u00e9rifier le code
 Button_ClearOtpReEnroll=R\u00e9inscrire le p\u00e9riph\u00e9rique mobile
-Button_HelpdeskClearOtpSecret=Effacer le secret du mot de passe \u00e0 usage unique
+Button_HelpdeskClearOtpSecret=Effacer le code secret du mot de passe \u00e0 usage unique
 Button_ClearResponses=Effacer les r\u00e9ponses
 Button_CloseWindow=Fermer la fen\u00eatre
 Button_Confirm=Confirmer
@@ -38,7 +38,7 @@ Button_ConfirmResponses=Confirmer les r\u00e9ponses de s\u00e9curit\u00e9
 Button_Continue=Continuer
 Button_Create=Cr\u00e9er
 Button_Delete=Supprimer
-Button_Email=Courrier \u00e9lectronique
+Button_Email=Courriel
 Button_GoBack=Pr\u00e9c\u00e9dent
 Button_Hide=Masquer
 Button_Hide_Responses=Masquer les r\u00e9ponses
@@ -109,13 +109,13 @@ Display_Minutes=minutes
 Display_NAAF_PASSWORD=Veuillez fournir votre mot de passe d'authentification NAAF.
 Display_NAAF_LDAP_PASSWORD=Veuillez fournir votre mot de passe d'authentification LDAP.
 Display_NAAF_SECURITY_QUESTIONS=R\u00e9pondez \u00e0 vos questions de s\u00e9curit\u00e9.
-Display_NAAF_EMAIL_OTP=Un courrier \u00e9lectronique a \u00e9t\u00e9 envoy\u00e9 avec un mot de passe \u00e0 usage unique.
+Display_NAAF_EMAIL_OTP=Un courriel a \u00e9t\u00e9 envoy\u00e9 avec un mot de passe \u00e0 usage unique.
 Display_NAAF_SMS_OTP=Un SMS a \u00e9t\u00e9 envoy\u00e9 avec votre mot de passe \u00e0 usage unique.
-Display_NAAF_SMARTPHONE=Le processus de v\u00e9rification par t\u00e9l\u00e9phone intelligent a d\u00e9marr\u00e9. Veuillez reprendre une fois qu'elle sera termin\u00e9e.
+Display_NAAF_SMARTPHONE=Le processus de v\u00e9rification par t\u00e9l\u00e9phone intelligent a d\u00e9marr\u00e9. Veuillez reprendre une fois l'ex\u00e9cution du processus termin\u00e9.
 Display_NAAF_RADIUS=Veuillez fournir votre mot de passe d'authentification RADIUS.
 Display_NAAF_TOTP=Entrez votre valeur TOTP.
 Display_NAAF_HOTP=Entrez votre valeur HOTP.
-Display_NAAF_VOICE=Le processus de v\u00e9rification vocale a d\u00e9marr\u00e9. Veuillez reprendre une fois qu'elle sera termin\u00e9e.
+Display_NAAF_VOICE=Le processus de v\u00e9rification vocale a d\u00e9marr\u00e9. Veuillez reprendre une fois l'ex\u00e9cution du processus termin\u00e9.
 Display_NewUser=Pour enregistrer un nouveau compte, remplissez le formulaire suivant.
 Display_NewUserProfile=Pour enregistrer un nouveau compte, s\u00e9lectionnez un profil.
 Display_PasswordExpired=Votre mot de passe est arriv\u00e9 \u00e0 expiration. Vous devez \u00e0 pr\u00e9sent en d\u00e9finir un nouveau.
@@ -161,17 +161,17 @@ Display_SetupRequiredResponses=
 Display_SetupResponses=<p>Si vous avez oubli\u00e9 votre mot de passe, vous pourrez acc\u00e9der \u00e0 votre compte en r\u00e9pondant \u00e0 vos questions de s\u00e9curit\u00e9.</p><p>Choisissez les questions et r\u00e9ponses qui serviront \u00e0 v\u00e9rifier votre identit\u00e9 en cas d'oubli de votre mot de passe. \u00c9tant donn\u00e9 que les r\u00e9ponses \u00e0 ces questions permettront d'acc\u00e9der \u00e0 votre compte, veillez \u00e0 fournir des r\u00e9ponses difficiles \u00e0 deviner ou \u00e0 d\u00e9couvrir pour d'autres utilisateurs.</p>
 Display_SetupOtpSecret=Si vous oubliez votre mot de passe, vous pouvez acc\u00e9der \u00e0 votre compte \u00e0 l'aide de votre p\u00e9riph\u00e9rique mobile. Suivez les instructions ci-dessous en fonction du type de votre p\u00e9riph\u00e9rique.
 Display_SetupOtp_Android_Title=Android
-Display_SetupOtp_Android_Steps=<b>Installez l'application Google Authenticator pour Android.</b><ol><li>Sur votre t\u00e9l\u00e9phone, acc\u00e9dez \u00e0 Google Play Store.</li><li>Recherchez <b>Google Authenticator</b>.<br/>(<a target\="playstore" href\="https\://play.google.com/store/apps/details?id\=com.google.android.apps.authenticator2">T\u00e9l\u00e9chargez \u00e0 partir de Google Play Store</a>)</li><li>T\u00e9l\u00e9chargez et installez l'application.</li></ol><b>Ensuite, ouvrez et configurez Google Authenticator.</b><ol><li>Dans Google Authenticator, appuyez sur Menu et s\u00e9lectionnez "Set up account" (Configurer le compte)</li><li>S\u00e9lectionnez "Scan a barcode" (Analyser un code \u00e0 barres).</li><li>Utilisez l'appareil photo de votre t\u00e9l\u00e9phone pour ce faire.</li><li>Une fois le code analys\u00e9, cliquez sur le bouton Continue (Continuer).</li></ol>
+Display_SetupOtp_Android_Steps=<b>Installez l'application Google Authenticator pour Android.</b><ol><li>Sur votre t\u00e9l\u00e9phone, acc\u00e9dez \u00e0 Google Play Store.</li><li>Recherchez <b>Google Authenticator</b>.<br/>(<a target\="playstore" href\="https\://play.google.com/store/apps/details?id\=com.google.android.apps.authenticator2">T\u00e9l\u00e9chargez \u00e0 partir de Google Play Store</a>)</li><li>T\u00e9l\u00e9chargez et installez l'application.</li></ol><b>Ensuite, ouvrez et configurez Google Authenticator.</b><ol><li>Dans Google Authenticator, appuyez sur Menu et s\u00e9lectionnez "Set up account" (Configurer le compte)</li><li>S\u00e9lectionnez "Scan a barcode" (Lire le code \u00e0 barres).</li><li>Utilisez l'appareil photo de votre t\u00e9l\u00e9phone pour ce faire.</li><li>Une fois le code lu, cliquez sur le bouton Continue (Continuer).</li></ol>
 Display_SetupOtp_iPhone_Title=iPhone
-Display_SetupOtp_iPhone_Steps=<b>Sur votre iPhone, appuyez sur l'ic\u00f4ne App Store.</b><ol><li>Sur votre t\u00e9l\u00e9phone, acc\u00e9dez \u00e0 l'App Store.</li><li>Recherchez <b>Google Authenticator</b>.<br/>(<a target\="itunesstore" href\="https\://itunes.apple.com/us/app/google-authenticator/id388497605?mt\=8">T\u00e9l\u00e9chargez l'application \u00e0 partir de l'App Store</a>)</li><li>Appuyez sur l'application, puis appuyez sur Free (Gratuit) pour la t\u00e9l\u00e9charger et l'installer.</li></ol><b>Ensuite, ouvrez et configurez Google Authenticator.</b><ol><li>Dans Google Authenticator, appuyez sur le signe "+", puis sur "Scan Barcode" (Analyser un code \u00e0 barres)</li><li>Utilisez l'appareil photo de votre t\u00e9l\u00e9phone pour ce faire.</li><li>Une fois le code analys\u00e9, cliquez sur le bouton Continue (Continuer).</li></ol>
+Display_SetupOtp_iPhone_Steps=<b>Sur votre iPhone, appuyez sur l'ic\u00f4ne App Store.</b><ol><li>Sur votre t\u00e9l\u00e9phone, acc\u00e9dez \u00e0 l'App Store.</li><li>Recherchez <b>Google Authenticator</b>.<br/>(<a target\="itunesstore" href\="https\://itunes.apple.com/us/app/google-authenticator/id388497605?mt\=8">T\u00e9l\u00e9chargez l'application \u00e0 partir de l'App Store</a>)</li><li>Appuyez sur l'application, puis appuyez sur Free (Gratuit) pour la t\u00e9l\u00e9charger et l'installer.</li></ol><b>Ensuite, ouvrez et configurez Google Authenticator.</b><ol><li>Dans Google Authenticator, appuyez sur le signe "+", puis sur "Scan Barcode" (Lire le code \u00e0 barres)</li><li>Utilisez l'appareil photo de votre t\u00e9l\u00e9phone pour ce faire.</li><li>Une fois le code lu, cliquez sur le bouton Continue (Continuer).</li></ol>
 Display_SetupOtp_Other_Title=Autre
-Display_SetupOtp_Other_Steps=<b>Recherchez une application \u00e0 deux facteurs compatible.</b><ul><li>Essayez de trouver <b>Google Authenticator</b> dans l'App Store de votre p\u00e9riph\u00e9irque.<br/>De nombreux p\u00e9riph\u00e9riques ont des applications compatibles.</li><li>Essayez de trouver une application qui prend en charge les "<b>jetons de s\u00e9curit\u00e9 TOTP</b>" ou "RFC6238".</li><li>T\u00e9l\u00e9chargez et installez l'application.</li></ul><b>Ensuite, ouvrez et configurez l'application.</b><ol><li>Entrez les donn\u00e9es ci-dessous ou analysez le code en suivant les instructions de l'application.</li><li>Une fois l'application configur\u00e9e, cliquez sur le bouton Continuer.</li></ol>
+Display_SetupOtp_Other_Steps=<b>Recherchez une application \u00e0 deux facteurs compatible.</b><ul><li>Essayez de trouver <b>Google Authenticator</b> dans l'App Store de votre p\u00e9riph\u00e9rique.<br/>De nombreux p\u00e9riph\u00e9riques ont des applications compatibles.</li><li>Essayez de trouver une application qui prend en charge les "<b>jetons de s\u00e9curit\u00e9 TOTP</b>" ou "RFC6238".</li><li>T\u00e9l\u00e9chargez et installez l'application.</li></ul><b>Ensuite, ouvrez et configurez l'application.</b><ol><li>Entrez les donn\u00e9es ci-dessous ou lisez le code en suivant les instructions de l'application.</li><li>Une fois l'application configur\u00e9e, cliquez sur le bouton Continuer.</li></ol>
 Display_TokenDestination=Destination du jeton
-Display_TokenResend=Vous devriez recevoir imm\u00e9diatement votre code de s\u00e9curit\u00e9. Si vous attendez depuis un moment sans rien recevoir, cliquez sur le bouton Renvoyer pour en recevoir un nouveau.
+Display_TokenResend=Vous devriez recevoir imm\u00e9diatement votre code de s\u00e9curit\u00e9. Si vous attendez depuis un moment et n'avez rien re\u00e7u, cliquez sur le bouton Renvoyer un code pour recevoir un nouveau code.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique le <span class\="timestamp">%1%</span>. Vous pouvez tester votre p\u00e9riph\u00e9rique actuel en tapant le code g\u00e9n\u00e9r\u00e9 ci-dessous. Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
-Display_WarnExistingOtpSecret=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique. Vous pouvez tester votre p\u00e9riph\u00e9ique actuel en tapant le code g\u00e9n\u00e9r\u00e9 ci-dessous. Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
+Display_WarnExistingOtpSecret=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique. Vous pouvez tester votre p\u00e9riph\u00e9rique actuel en tapant le code g\u00e9n\u00e9r\u00e9 ci-dessous. Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
 Display_WarnExistingResponseTime=Vous avez d\u00e9j\u00e0 configur\u00e9 vos questions et r\u00e9ponses de v\u00e9rification d'identit\u00e9 le  <span class\="timestamp">%1%</span>. Si vous continuez, vous pouvez de nouveau r\u00e9pondre \u00e0 vos questions.
 Display_WarnExistingResponse=Vous avez d\u00e9j\u00e0 configur\u00e9 vos questions et r\u00e9ponses de v\u00e9rification d'identit\u00e9. Si vous continuez, vous pouvez de nouveau r\u00e9pondre \u00e0 vos questions.
 Display_PleaseVerifyOtp=Veuillez entrer le code de v\u00e9rification \u00e0 6 chiffres pour votre p\u00e9riph\u00e9rique. S'il n'est pas configur\u00e9 pour fournir un code de v\u00e9rification, retournez \u00e0 la page pr\u00e9c\u00e9dente et configurez-le.
@@ -182,10 +182,10 @@ Display_Shortcuts=S\u00e9lectionnez l'un des liens suivants pour continuer.
 Display_ShowPasswordGuide=Guide des mots de passe
 Display_StrengthMeter=Force du mot de passe
 Display_UpdateProfile=Veuillez mettre \u00e0 jour les renseignements suivants \:
-Display_UpdateProfileConfirm=V\u00e9rifiez les informations entr\u00e9es et confirmez-les.
+Display_UpdateProfileConfirm=V\u00e9rifiez les informations ci-dessous que vous avez entr\u00e9es et confirmez-les.
 Display_UpdateProfileEnterCode=Un code vous a \u00e9t\u00e9 envoy\u00e9 \u00e0 <b>%1%</b> pour v\u00e9rifier votre adresse \u00e9lectronique. Saisissez ce code ici pour continuer.
 Display_UpdateProfileEnterCodeSMS=Un code vous a \u00e9t\u00e9 envoy\u00e9 au <b>%1%</b> pour v\u00e9rifier votre num\u00e9ro de t\u00e9l\u00e9phone. Saisissez ce code ici pour continuer.
-Display_UserEventHistory=Cette page affiche l'historique des \u00e9v\u00e9nements de mot de passe. Seules les op\u00e9rations r\u00e9alis\u00e9es avec cette application sont mentionn\u00e9es ici. Toutes les heures indiqu\u00e9es ici sont exprim\u00e9es dans le fuseau horaire %1%.
+Display_UserEventHistory=Cette page affiche l'historique des \u00e9v\u00e9nements li\u00e9s aux mots de passe. Seules les op\u00e9rations r\u00e9alis\u00e9es avec cette application sont mentionn\u00e9es ici. Toutes les heures indiqu\u00e9es ici sont exprim\u00e9es dans le fuseau horaire %1%.
 Display_TypingWait=Attente de la fin de la saisie....
 Field_AccountEnabled=Compte activ\u00e9
 Field_AccountExpired=Compte arriv\u00e9 \u00e0 expiration
@@ -226,16 +226,16 @@ Field_User_Supplied_Question=Question
 Field_UserDN=DN utilisateur
 Field_UserGUID=GUID utilisateur
 Field_Username=Nom d'utilisateur
-Field_UserEmail=Courrier \u00e9lectronique
+Field_UserEmail=Courriel
 Field_UserSMS=SMS
 Field_OTP_Identifier=Identificateur
-Field_OTP_Secret=Secret
+Field_OTP_Secret=Code secret
 Field_OTP_Type=Type
 Field_OTP_RecoveryCodes=Codes de r\u00e9cup\u00e9ration
 Field_OTP_Stored=Mot de passe \u00e0 usage unique stock\u00e9
 Field_OTP_Timestamp=Heure de stockage du mot de passe \u00e0 usage unique
 Field_VerificationMethodPreviousAuth=Authentification pr\u00e9c\u00e9dente
-Field_VerificationMethodToken=V\u00e9rification par message SMS/courrier \u00e9lectronique
+Field_VerificationMethodToken=V\u00e9rification par message SMS/courriel
 Field_VerificationMethodOTP=V\u00e9rification du p\u00e9riph\u00e9rique mobile
 Field_VerificationMethodChallengeResponses=Questions et r\u00e9ponses secr\u00e8tes
 Field_VerificationMethodAttributes=Donn\u00e9es personnelles
@@ -251,7 +251,7 @@ Description_VerificationMethodRemoteResponses=
 Description_VerificationMethodNAAF=
 Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=R\u00e9ponse
-Long_Title_ActivateUser=Activez un compte pr\u00e9configur\u00e9 et \u00e9tablissez un nouveau mot de passe.
+Long_Title_ActivateUser=Activez un compte pr\u00e9configur\u00e9 et d\u00e9finissez un nouveau mot de passe.
 Long_Title_Admin=Fonctions administratives
 Long_Title_ChangePassword=\u00c9ditez votre mot de passe actuel.
 Long_Title_ForgottenPassword=R\u00e9cup\u00e9rez l'acc\u00e8s \u00e0 votre compte si vous avez oubli\u00e9 votre mot de passe.
@@ -259,8 +259,8 @@ Long_Title_ForgottenUsername=Recherchez votre nom d'utilisateur oubli\u00e9.
 Long_Title_GuestRegistration=Enregistrez un nouveau compte utilisateur invit\u00e9.
 Long_Title_GuestUpdate=Mettez \u00e0 jour un nouveau compte utilisateur invit\u00e9.
 Long_Title_Helpdesk=Outils du service d'assistance
-Long_Title_Logout=D\u00e9connexion de l'application en libre-service des mots de passe.
-Long_Title_Main_Menu=Menu principal du libre-service des mots de passe. Vous pouvez \u00e9diter votre mot de passe actuel, r\u00e9initialiser un mot de passe oubli\u00e9 ou effectuer d'autres op\u00e9rations relatives aux mots de passe.
+Long_Title_Logout=D\u00e9connexion de l'application de libre-service de mot de passe.
+Long_Title_Main_Menu=Menu principal du libre-service de mot de passe. Vous pouvez \u00e9diter votre mot de passe actuel, r\u00e9initialiser un mot de passe oubli\u00e9 ou effectuer d'autres op\u00e9rations relatives aux mots de passe.
 Long_Title_NewUser=Cr\u00e9ez un compte utilisateur.
 Long_Title_PeopleSearch=Recherchez les coordonn\u00e9es de vos coll\u00e8gues.
 Long_Title_SetupResponses=Les questions et r\u00e9ponses de s\u00e9curit\u00e9 vous permettent de r\u00e9cup\u00e9rer un mot de passe oubli\u00e9.
@@ -274,6 +274,7 @@ Long_Title_VerificationSend=Avant de pouvoir s\u00e9lectionner cet utilisateur, 
 Title_AnsweredQuestions=Questions auxquelles vous avez r\u00e9pondu
 Title_ActivateUser=Activer le compte
 Title_Admin=Administration
+Title_Application=R\u00e9initialisation du libre-service de mot de passe
 Title_Captcha=V\u00e9rification
 Title_ChangePassword=\u00c9diter le mot de passe
 Title_ConfirmResponses=Confirmer les questions de s\u00e9curit\u00e9
@@ -309,6 +310,8 @@ Title_SetupOtpSecret=Configurer l'authentification de l'application mobile
 Title_Shortcuts=Raccourcis
 Title_Status=\u00c9tat
 Title_Success=R\u00e9ussite
+Title_TitleBarAuthenticated=@User\:ID@ Libre-service de mot de passe
+Title_TitleBar=Libre-service de mot de passe
 Title_UpdateProfile=Mettre \u00e0 jour le profil
 Title_UpdateProfileConfirm=Confirmer les donn\u00e9es du profil
 Title_UserData=Mes donn\u00e9es
