- fix bug with broken form pages if update profile links added - improve js disconnect error - helpdesk sms verify not working bug

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -77,6 +77,7 @@ Display_ChangePasswordForm=Please enter the following data.  This is required to
 Display_CheckingData=Checking Data....
 Display_CheckingPassword=Checking Password....
 Display_CheckingResponses=Checking Answers....
+Display_ClientDisconnect=Unable to communicate with server.
 Display_CommunicationError=Unable to communicate with server.  Continue when ready.
 Display_ConfirmResponses=Be sure your answers and questions are correct.  Check the spelling and punctuation.  In you are unable to remember your password, you will be able to access your account by supplying the answers to these security questions.
 Display_Day=day
